# MOSCAL-1.0

./: .gitignore  CMakeLists.txt  README.md
.VSCodeCounter/2021-01-12_23-00-47/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-01-12_23-01-33/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-01-12_23-04-08/: details.md  results.csv  results.md  results.txt
scripts/: _default.json  armadillo.py  bath.py  bath_generator.py  bath_img.py  bath_img_tan.py  bath_lorentz.py  bath_lorentz2.py  bath_lorentz3.py  inp_delr.mat  inp_etaa.mat  inp_etal.mat  inp_etar.mat  inp_expn.mat  inp_mode.mat  input.json
scripts/rate/: kNA.py  kvib.json  kvib.py
src/apps/: .alphaDynamics.cpp.swp  1d-corr.cpp  1d-corr2-la.cpp  1d-corr2-se-e.cpp  1d-corr2-se-g.cpp  1d-la.cpp  1d-resp.cpp  1d-resp2.cpp  1d-se.cpp  2d-k3.cpp  2d-pp.cpp  2d-pp2.cpp  2d-resp.cpp  AT1d-corr.cpp  AT1d-corrnoSCI2.cpp  At1d-corr.cpp  alphaDynamics.cpp  bloch.cpp  cl-freeEnergyPerturb.cpp  coherence.cpp  dissipative-kernel.cpp  entrflu.cpp  et.cpp  lamDyn-GQ-rk20.cpp  lamDyn-GQ.cpp  lamDyn-GQnoSCI2.cpp  lamDynamics.cpp  moment.cpp  pcc.cpp  pcc_integral.cpp  pcet-flux.cpp  pcet-rate.cpp  pump-probe.cpp  rat0.bak  rate.cpp  retinal-0.cpp  retinal-1.cpp  retinal-2.cpp  retinal-3.cpp  retinal-photo.cpp  (+31 more)
src/bdeom/: CMakeLists.txt  blockdeom.hpp  blockdeomAlgebra.cpp  blockdeomEqSolverImag.cpp  blockdeomEqSolverProp.cpp  blockdeomEqSolverSCI3.cpp  blockdeomPropagation.cpp  blockdeomRem.cpp  corr1stLA.cpp  corr1stSE.cpp  corr3rdK3.cpp  corr3rdPP-monomer.cpp  corr3rdPP.cpp
src/blockdeom/: blockdeom.hpp  blockdeomAlgebra.cpp  blockdeomEqSolverProp.cpp  blockdeomEqSolverSCI3.cpp  blockdeomPropagation.cpp  blockdeomRem.cpp  blockdeomSyst.hpp  corr1stLA.cpp  corr1stSE.cpp  corr3rdK3.cpp  corr3rdPP-monomer.cpp  corr3rdPP.cpp  corrPcc.bak
src/blockdeom2/: CMakeLists.txt  blockdeom2.hpp  blockdeom2Algebra.cpp  blockdeom2Propagation.cpp  blockdeom2Rem.cpp  blockdeom2Syst.hpp  corr3rdPP2-monomer.cpp
src/codde/: codde.hpp  coddeAlgebra.cpp  coddeEquilibrium.cpp  coddePropagation.cpp  coddeRem.cpp
src/deom/: CMakeLists.txt  deom.hpp  deomAlgebra.cpp  deomBath.hpp  deomConst.hpp  deomEqSolverKrylov.cpp  deomEqSolverProp.cpp  deomEqSolverSCI1.cpp  deomEqSolverSCI2.cpp  deomEqSolverSCI3.cpp  deomHidx.hpp  deomKrylov.cpp  deomPropagation.cpp  deomPulse.hpp  deomRem.cpp  deomSyst.hpp  resp1st.cpp  resp2nd.cpp  (+5 more)
(+21 files in other folders)
